Connect backend API

--- a/src/app/modules/auth/check-mail/check-mail.component.html
+++ b/src/app/modules/auth/check-mail/check-mail.component.html
@@ -19,9 +19,9 @@
         mat-flat-button
         color="primary"
         class="home-button"
-        (click)="navigateTo('/auth/create-password')"
+        (click)="navigateTo('')"
       >
-        Verify
+        Go back to home
       </button>
     </div>
   </div>
