Add auth guard and complete authentication services

--- a/src/app/modules/auth/create-password/create-password.component.html
+++ b/src/app/modules/auth/create-password/create-password.component.html
@@ -5,45 +5,53 @@
       alt="landing-page"
       class="home-img"
     />
-    <div class="home-info">
-      <h1 class="home-header">Create Password</h1>
-      <form class="home-form">
-        <mat-form-field
-          class="password"
-          appearance="outline"
-          class="home-input"
-        >
+    <form
+      [formGroup]="createPasswordForm"
+      (ngSubmit)="submit()"
+      class="home-form"
+    >
+      <div class="home-info">
+        <h1 class="home-header">Create Password</h1>
+
+        <mat-form-field appearance="outline" class="home-input">
           <mat-label>Password</mat-label>
-          <input type="password" matInput />
+          <input
+            type="password"
+            autocomplete="off"
+            formControlName="password"
+            matInput
+          />
         </mat-form-field>
         <br />
-        <mat-form-field
-          class="confirm password"
-          appearance="outline"
-          class="home-input"
-        >
+        <mat-form-field appearance="outline" class="home-input">
           <mat-label>Confirm Password</mat-label>
-          <input type="password" matInput />
+          <input
+            type="password"
+            autocomplete="off"
+            formControlName="confirmPassword"
+            matInput
+          />
         </mat-form-field>
-      </form>
-      <div class="home-body">
-        <p>Password must be :</p>
-        <ul>
-          <li>atleast 8 characters</li>
-          <li>mixture of both uppercase and lowercase letters.</li>
-        </ul>
+        <div class="home-body">
+          <p>Password must be :</p>
+          <ul>
+            <li>atleast 8 characters</li>
+            <li>mixture of both uppercase and lowercase letters.</li>
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <div class="home-button">
-      <button
-        mat-flat-button
-        color="primary"
-        class="home-button"
-        (click)="navigateTo('/auth')"
-      >
-        Confirm
-      </button>
-    </div>
+      <div class="home-button">
+        <button
+          mat-flat-button
+          color="primary"
+          class="home-button"
+          type="submit"
+          [disabled]="loading"
+        >
+          Confirm
+        </button>
+      </div>
+    </form>
   </div>
 </div>
