--- a/src/app/modules/default-home/default-home.component.html
+++ b/src/app/modules/default-home/default-home.component.html
@@ -1,1 +1,48 @@
-<p>default-home works!</p>
+<div class="center">
+  <div class="home">
+    <img
+      src="assets/images/complete-credentials.png"
+      alt="landing-page"
+      class="home-img"
+    />
+    <div class="home-info">
+      <h1 class="home-header">Verify Account</h1>
+      <p class="home-body">Lorem ipsum dolor sit amet</p>
+    </div>
+
+    <div class="home-steps">
+      <mat-card class="home-steps-info" (click)="proceed()">
+        <mat-card-header>
+          <mat-card-title>
+            <mat-icon>check_circle</mat-icon>
+            <span> Personal Information</span>
+          </mat-card-title>
+          <mat-card-subtitle
+            >Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit.</mat-card-subtitle
+          >
+        </mat-card-header>
+      </mat-card>
+      <br />
+      <mat-card class="home-steps-info" (click)="proceed()">
+        <mat-card-header>
+          <mat-card-title>
+            <mat-icon>check_circle_outline</mat-icon>
+            <span> Use identity card</span>
+          </mat-card-title>
+          <mat-card-subtitle
+            >Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit.</mat-card-subtitle
+          >
+        </mat-card-header>
+      </mat-card>
+    </div>
+
+    <div class="home-steps"></div>
+    <div class="home-button">
+      <button mat-flat-button color="primary" class="home-button" type="button">
+        Continue
+      </button>
+    </div>
+  </div>
+</div>
