Add verification pages

--- a/src/app/modules/default-home/default-home.component.html
+++ b/src/app/modules/default-home/default-home.component.html
@@ -18,7 +18,7 @@
             <span> Personal Information</span>
           </mat-card-title>
           <mat-card-subtitle
-            >Lorem ipsum dolor sit amet, consectetur adipiscing
+            >Lorem ipsum dolor sit amet, consec adipiscing
             elit.</mat-card-subtitle
           >
         </mat-card-header>
@@ -31,7 +31,7 @@
             <span> Use identity card</span>
           </mat-card-title>
           <mat-card-subtitle
-            >Lorem ipsum dolor sit amet, consectetur adipiscing
+            >Lorem ipsum dolor sit amet, consec adipiscing
             elit.</mat-card-subtitle
           >
         </mat-card-header>
