--- a/src/app/modules/protected/default-home/default-home.component.scss
+++ b/src/app/modules/protected/default-home/default-home.component.scss
@@ -25,6 +25,8 @@
       font-family: Open Sans;
       font-size: 13px;
       font-weight: 300;
+      margin-top: -10px;
+      margin-bottom: 25px;
     }
   }
   &-steps {
